--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@prisma/client": "^6.18.0",
     "bcryptjs": "^3.0.2",
     "next": "14.0.0",
-    "next-auth": "^4.24.5",
+    "next-auth": "4.24.5",
     "nodemailer": "^6.9.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
@@ -34,3 +34,4 @@
     "typescript": "^5"
   }
 }
+
