--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
+    "postcss": "^8.5.6",
     "prisma": "^6.18.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5"
   }
 }
-
