--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint",
     "db:push": "prisma db push",
-    "db:generate": "prisma generate"
+    "db:generate": "prisma generate",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -18,7 +19,8 @@
     "next-auth": "4.24.5",
     "nodemailer": "^6.9.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "vercel": "^38.0.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
