--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.18.0",
+    "@stripe/stripe-js": "^8.2.0",
+    "@types/stripe": "^8.0.416",
     "bcryptjs": "^3.0.2",
     "next": "14.0.0",
     "next-auth": "4.24.5",
     "nodemailer": "^6.9.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "stripe": "^19.2.0",
     "vercel": "^38.0.0"
   },
   "devDependencies": {
