--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "build": "prisma generate && next build",
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "next lint",
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
     "deploy": "vercel --prod"
